tests/paczka1/fuzzy1/53064062.err
Error in line 4: HkcrAP2O1f S859 28,7
Error in line 9: S854 S854 65,8
Error in line 8: kWvN S384 36,0
Error in line 18: S854 S243 89,6
Error in line 26: S854 S384 60,0
Error in line 22: eLUuMgCuMfB S384 43,9
Error in line 34: eLUuMgCuMfB S859 20,9
